==> shaise/ESP32/main/wifi.c <==
#include "driver.h"
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/event_groups.h"
#include <esp_log.h>
#include <esp_wifi.h>
#include <esp_event.h>
#include "mdns.h"
#include "nvs_flash.h"
#include "networking/networking.h"
#include "networking/utils.h"
#include "wifi.h"
#include "dns_server.h"
#include "grbl/report.h"
#include "grbl/nvs_buffer.h"
#include "grbl/protocol.h"

char *wifi_get_mac (void)
{
    static char mac[18];
    uint8_t bmac[6];

    esp_wifi_get_mac(ESP_IF_WIFI_STA, bmac);
    sprintf(mac, MAC_FORMAT_STRING, bmac[0], bmac[1], bmac[2], bmac[3], bmac[4], bmac[5]);

    return mac;
}

static void start_services (bool start_ssdp)
{
#if TELNET_ENABLE
    if(network.services.telnet && !services.telnet)
        services.telnet = telnetd_init(network.telnet_port);
#endif

#if WEBSOCKET_ENABLE
    if(network.services.websocket && !services.websocket)
        services.websocket = websocketd_init(network.websocket_port);
#endif

#if FTP_ENABLE
    if(network.services.ftp && !services.ftp)
        services.ftp = ftpd_init(network.ftp_port);
#endif

#if HTTP_ENABLE
    if(network.services.http && !services.http) {
        services.http = httpd_init(network.http_port);
  #if WEBDAV_ENABLE
        if(network.services.webdav && !services.webdav)
            services.webdav = webdav_init();
  #endif
    }
  #if SSDP_ENABLE
    if(start_ssdp && services.http && !services.ssdp)
        services.ssdp = ssdp_init(network.http_port);
  #endif
#endif

#if MDNS_ENABLE
    if(*network.hostname && network.services.mdns && !services.mdns) {
        if((services.mdns = mdns_init() == ESP_OK)) {

            mdns_hostname_set(network.hostname);
            mdns_instance_name_set(network.hostname);

            mdns_txt_item_t device_info[3] = {
                { .key = "version", .value = GRBL_VERSION},
                { .key = "build", .value = NULL},
                { .key = "model", .value = "grblHAL"}
            };
            device_info[1].value = uitoa(GRBL_BUILD);
            mdns_service_add(NULL, "_device-info", "_tcp", 1, device_info, 3); // ESP-IDF does not allow port 0?

            if(services.http)
                mdns_service_add(NULL, "_http", "_tcp", network.http_port, &(mdns_txt_item_t){ .key = "path", .value = "/" }, 1);
            if(services.webdav)
                mdns_service_add(NULL, "_webdav", "_tcp", network.http_port, &(mdns_txt_item_t){ .key = "path", .value = "/" }, 1);
            if(services.ftp)
                mdns_service_add(NULL, "_ftp", "_tcp", network.ftp_port, &(mdns_txt_item_t){ .key = "path", .value = "/" }, 1);
            if(services.websocket)
                mdns_service_add(NULL, "_websocket", "_tcp", network.websocket_port, NULL, 0);
            if(services.telnet) 
                mdns_service_add(NULL, "_telnet", "_tcp", network.telnet_port, NULL, 0);
            protocol_enqueue_rt_command(msg_mdns_active);
        }
    }
#endif

#if MQTT_ENABLE
    if(!mqtt_connected)
        mqtt_connect(&network.mqtt, networking_get_info()->mqtt_client_id);
#endif

#if TELNET_ENABLE || WEBSOCKET_ENABLE || FTP_ENABLE
    sys_timeout(STREAM_POLL_INTERVAL, lwIPHostTimerHandler, NULL);
#endif
}

char *wifi_get_authmode_name (wifi_auth_mode_t authmode)
{
    return authmode == WIFI_AUTH_OPEN ? "open" :
           authmode == WIFI_AUTH_WEP ? "wep" :
           authmode == WIFI_AUTH_WPA_PSK ? "wpa-psk" :
           authmode == WIFI_AUTH_WPA2_PSK ? "wpa-psk" :
           authmode == WIFI_AUTH_WPA_WPA2_PSK ? "wpa-wpa2-psk" :
           authmode == WIFI_AUTH_WPA2_ENTERPRISE ? "wpa-eap" :
           "unknown";
}

void wifi_ap_scan (void)
{
    // https://esp32.com/viewtopic.php?t=5536
    // https://esp32.com/viewtopic.php?t=7305

    static const wifi_scan_config_t scan_config = {
        .ssid = 0,
        .bssid = 0,
        .channel = 0,
        .scan_time.active = {
          .min = 500,
          .max = 1500
        },
        .scan_type = WIFI_SCAN_TYPE_ACTIVE,
        .show_hidden = false
    };

    if(!(xEventGroupGetBits(wifi_event_group) & SCANNING_BIT) && esp_wifi_scan_start(&scan_config, false) == ESP_OK)
        xEventGroupSetBits(wifi_event_group, SCANNING_BIT);
}

bool wifi_start (void)
{
    wifi_mode_t currentMode;

    if(nvs_address == 0)
        return false;

#if !WIFI_SOFTAP
    if(wifi.mode == WiFiMode_APSTA) // Reset to default
        wifi.mode = WIFI_MODE;
#endif

    if(esp_wifi_get_mode(&currentMode) == ESP_ERR_WIFI_NOT_INIT) {

        esp_netif_init();
        esp_event_loop_create_default();

        wifi_event_group = xEventGroupCreate();
        aplist_mutex = xSemaphoreCreateMutex();
        xEventGroupClearBits(wifi_event_group, SCANNING_BIT);

        if(esp_event_handler_instance_register(WIFI_EVENT, ESP_EVENT_ANY_ID, wifi_event_handler, NULL, NULL) != ESP_OK)
            return false;

        if(esp_event_handler_instance_register(IP_EVENT, IP_EVENT_STA_GOT_IP, ip_event_handler, NULL, NULL) != ESP_OK)
            return false;

        wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();

        if(esp_wifi_init(&cfg) != ESP_OK)
            return false;

        if(esp_wifi_set_storage(WIFI_STORAGE_RAM) != ESP_OK)
            return false;

        if(esp_wifi_set_mode(WIFI_MODE_NULL) != ESP_OK)
            return false;

        esp_wifi_set_ps(WIFI_PS_NONE);

        currentMode = WIFI_MODE_NULL;
    }

    if(currentMode != settingToMode(wifi.mode) && (wifi.mode == WiFiMode_AP || wifi.mode == WiFiMode_APSTA)) {

        wifi_config_t wifi_config;

        if(ap_netif == NULL)
            ap_netif = esp_netif_create_default_wifi_ap();

        esp_netif_dhcps_stop(ap_netif);

        wifi.ap.network.ip_mode = IpMode_Static; // Only mode supported

        init_adapter(ap_netif, &wifi.ap.network);

        esp_netif_dhcps_start(ap_netif);

        memset(&wifi_config, 0, sizeof(wifi_config_t));

        if(*wifi.ap.ssid == '\0')
            return false;

        if(strlcpy((char *)wifi_config.ap.ssid, wifi.ap.ssid, sizeof(wifi_config.ap.ssid)) >= sizeof(wifi_config.ap.ssid))
            return false;

        if (*wifi.ap.password == '\0')
            wifi_config.ap.authmode = WIFI_AUTH_OPEN;
        else if(strlcpy((char *)wifi_config.ap.password, wifi.ap.password, sizeof(wifi_config.ap.password)) < sizeof(wifi_config.ap.password))
            wifi_config.ap.authmode = WIFI_AUTH_WPA_WPA2_PSK;
        else
            return false;

        wifi_config.ap.max_connection = 1;

        if(esp_wifi_set_mode(settingToMode(wifi.mode)) != ESP_OK)
            return false;

        if(esp_wifi_set_config(ESP_IF_WIFI_AP, &wifi_config) != ESP_OK)
            return false;

        if(wifi.mode == WiFiMode_APSTA)
            xEventGroupSetBits(wifi_event_group, APSTA_BIT);
    }

    if(currentMode != settingToMode(wifi.mode) && (wifi.mode == WiFiMode_STA || wifi.mode == WiFiMode_APSTA)) {
        
        if(sta_netif == NULL)
            sta_netif = esp_netif_create_default_wifi_sta();

        esp_netif_dhcps_stop(sta_netif);
    
        wifi.sta.network.ip_mode = IpMode_DHCP; // For now...

        if(init_adapter(sta_netif, &wifi.sta.network))
            esp_netif_dhcps_start(sta_netif);

        memset(&wifi_sta_config, 0, sizeof(wifi_config_t));

        if(*wifi.sta.ssid != '\0') {

            if(strlcpy((char *)wifi_sta_config.sta.ssid, wifi.sta.ssid, sizeof(wifi_sta_config.sta.ssid)) >= sizeof(wifi_sta_config.sta.ssid))
                return false;

            if(strlcpy((char *)wifi_sta_config.sta.password, wifi.sta.password, sizeof(wifi_sta_config.sta.password)) >= sizeof(wifi_sta_config.sta.password))
                return false;
        }

        if(esp_wifi_set_mode(settingToMode(wifi.mode)) != ESP_OK)
            return false;

        if(esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_sta_config) != ESP_OK)
            return false;
    }

    if(esp_wifi_start() != ESP_OK)
        return false;

    if(wifi.mode == WiFiMode_AP || wifi.mode == WiFiMode_APSTA)
        esp_netif_set_hostname(ap_netif, wifi.ap.network.hostname);

    if(wifi.mode == WiFiMode_STA || wifi.mode == WiFiMode_APSTA)
        esp_netif_set_hostname(sta_netif, wifi.sta.network.hostname);

    if(wifi.mode == WiFiMode_APSTA)
        wifi_ap_scan();

    return true;
}

bool wifi_stop (void)
{
    stop_services();

    esp_wifi_stop();

    return true;
}

static char *wifi_get_ip (setting_id_t setting)
{
    static char ip[INET6_ADDRSTRLEN];

    switch(setting) {

        case Setting_IpAddress3:
            inet_ntop(AF_INET, &wifi.sta.network.ip, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_Gateway3:
            inet_ntop(AF_INET, &wifi.sta.network.gateway, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_NetMask3:
            inet_ntop(AF_INET, &wifi.sta.network.mask, ip, INET6_ADDRSTRLEN);
            break;

#if MQTT_ENABLE
        case Setting_MQTTBrokerIpAddress:
            inet_ntop(AF_INET, &wifi.sta.network.mqtt.ip, ip, INET6_ADDRSTRLEN);
            break;
#endif

#if WIFI_SOFTAP

        case Setting_IpAddress2:
            inet_ntop(AF_INET, &wifi.ap.network.ip, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_Gateway2:
            inet_ntop(AF_INET, &wifi.ap.network.gateway, ip, INET6_ADDRSTRLEN);
            break;

        case Setting_NetMask2:
            inet_ntop(AF_INET, &wifi.ap.network.mask, ip, INET6_ADDRSTRLEN);
            break;

#endif

        default:
            *ip = '\0';
            break;
    }

    return ip;
}
