==> grblHAL/RP2040/wifi.c <==
#include "driver.h"
#include <string.h>
#include "pico/stdlib.h"
#include "pico/cyw43_arch.h"
#include "networking/networking.h"
#include "networking/utils.h"
#include "lwip/timeouts.h"
#include "lwip/apps/mdns.h"
#include "wifi.h"
#include "dhcpserver.h"
#include "grbl/report.h"
#include "grbl/nvs_buffer.h"
#include "grbl/protocol.h"
#define USE_LWIP_POLLING 1

char *wifi_get_authmode_name (uint32_t authmode)
{
    return authmode == CYW43_AUTH_OPEN ? "open" :
           authmode == CYW43_AUTH_WPA_TKIP_PSK ? "wpa-psk" :
           authmode == CYW43_AUTH_WPA2_AES_PSK ? "wpa2-psk" :
           authmode == CYW43_AUTH_WPA2_MIXED_PSK ? "wpa-wpa2-psk" :
           "unknown";
}

static char *wifi_get_mac (void)
{
    static char mac[18];
    uint8_t bmac[6];

    cyw43_wifi_get_mac(&cyw43_state, interface, bmac);
    sprintf(mac, MAC_FORMAT_STRING, bmac[0], bmac[1], bmac[2], bmac[3], bmac[4], bmac[5]);

    return mac;
}

static void start_services (void)
{
#if TELNET_ENABLE
    if(network.services.telnet && !services.telnet)
        services.telnet = telnetd_init(network.telnet_port);
#endif

#if WEBSOCKET_ENABLE
    if(network.services.websocket && !services.websocket)
        services.websocket = websocketd_init(network.websocket_port);
#endif

#if FTP_ENABLE
    if(network.services.ftp && !services.ftp)
        services.ftp = ftpd_init(network.ftp_port);
#endif

#if HTTP_ENABLE
    if(network.services.http && !services.http) {
        services.http = httpd_init(network.http_port);
  #if WEBDAV_ENABLE
        if(network.services.webdav && !services.webdav)
            services.webdav = webdav_init();
  #endif
  #if SSDP_ENABLE
        if(network.services.ssdp && !services.ssdp)
            services.ssdp = ssdp_init(network.http_port);
  #endif
    }
#endif

#if MQTT_ENABLE
    if(wifi.mode == WiFiMode_STA && !mqtt_connected)
        mqtt_connect(&network.mqtt, networking_get_info()->mqtt_client_id);
#endif

#if MDNS_ENABLE
    if(*network.hostname && network.services.mdns && !services.mdns) {

        mdns_resp_init();

        if((services.mdns = mdns_resp_add_netif(netif_default, network.hostname) == ERR_OK)) {

            mdns_resp_add_service(netif_default, network.hostname, "_device-info", DNSSD_PROTO_TCP, 0, mdns_device_info, "version=" GRBL_VERSION);

            if(services.http)
                mdns_resp_add_service(netif_default, network.hostname, "_http", DNSSD_PROTO_TCP, network.http_port, mdns_service_info, "path=/");
            if(services.webdav)
                mdns_resp_add_service(netif_default, network.hostname, "_webdav", DNSSD_PROTO_TCP, network.http_port, mdns_service_info, "path=/");
            if(services.websocket)
                mdns_resp_add_service(netif_default, network.hostname, "_websocket", DNSSD_PROTO_TCP, network.websocket_port, mdns_service_info, NULL);
            if(services.telnet)
                mdns_resp_add_service(netif_default, network.hostname, "_telnet", DNSSD_PROTO_TCP, network.telnet_port, mdns_service_info, NULL);
            if(services.ftp)
                mdns_resp_add_service(netif_default, network.hostname, "_ftp", DNSSD_PROTO_TCP, network.ftp_port, mdns_service_info, "path=/");

//            mdns_resp_announce(netif_default);
        }
    }
#endif

#if MODBUS_ENABLE & MODBUS_TCP_ENABLED
    modbus_tcp_client_start();
#endif

#if USE_LWIP_POLLING && (TELNET_ENABLE || WEBSOCKET_ENABLE || FTP_ENABLE)
    sys_timeout(STREAM_POLL_INTERVAL, lwIPHostTimerHandler, NULL);
#endif
}

void wifi_ap_scan (void)
{
    ap_list.ap_num = 0;
    if(ap_list.ap_records) {
        free(ap_list.ap_records);
        ap_list.ap_records = NULL;
    }

    if (!scan_in_progress) {
        cyw43_wifi_scan_options_t scan_options = {0};
        scan_in_progress = cyw43_wifi_scan(&cyw43_state, &scan_options, NULL, scan_result) == 0;
    } else if (!cyw43_wifi_scan_active(&cyw43_state))
        scan_in_progress = false; 
}

bool wifi_start (void)
{
    int ret;
    uint32_t country_code;

    if(nvs_address == 0)
        return false;

    if((country_code = get_country_code(wifi.ap.country)))
        ret = cyw43_arch_init_with_country(country_code);
    else
        ret = cyw43_arch_init();

    if (ret != 0) {
        protocol_enqueue_rt_command(msg_wifi_failed);
        return false;
    }

#ifdef WIFI_SOFTAP 

    if(wifi.mode == WiFiMode_AP && *wifi.ap.ssid) {

        init_settings(CYW43_ITF_AP, &wifi.ap.network);

        cyw43_arch_enable_ap_mode(wifi.ap.ssid,
                                   *wifi.ap.password ? wifi.ap.password : NULL,
                                    *wifi.ap.password ? CYW43_AUTH_WPA2_AES_PSK : CYW43_AUTH_OPEN);

        netif_set_status_callback(netif_default, netif_ap_status_callback);
        netif_set_link_callback(netif_default, link_ap_status_callback);

        ip4_addr_t gw, mask;

//        get_addr(&ip, network.ip);
//        get_addr(&mask, network.mask);

        IP4_ADDR(&gw, 192, 168, 1, 4);
        IP4_ADDR(&mask, 255, 255, 255, 0);

        dhcp_server_init(&dhcp_server, &gw, &mask);
 //       dns_server_init(&dns_server, &gw);
    }

#endif

    if(wifi.mode == WiFiMode_STA && *wifi.sta.ssid) {

        init_settings(CYW43_ITF_STA, &wifi.sta.network);

        cyw43_arch_enable_sta_mode();

        netif_set_status_callback(netif_default, netif_sta_status_callback);
        netif_set_link_callback(netif_default, link_sta_status_callback);

        if((ret = cyw43_arch_wifi_connect_bssid_async(wifi.sta.ssid,
                                                    networking_ismemnull(wifi.ap.bssid, sizeof(bssid_t)) ? NULL : wifi.ap.bssid,
                                                     *wifi.sta.password ? wifi.sta.password : NULL,
                                                      *wifi.sta.password ? CYW43_AUTH_WPA2_MIXED_PSK : CYW43_AUTH_OPEN)) != 0)
            protocol_enqueue_rt_command(msg_wifi_failed);
    }

#if LWIP_NETIF_HOSTNAME
    netif_set_hostname(netif_default, network.hostname);
#endif

#if PICO_CYW43_ARCH_POLL
    on_execute_realtime = grbl.on_execute_realtime;
    grbl.on_execute_realtime = enet_poll;
#endif

    return ret == 0;
}

bool wifi_stop (void)
{
    stop_services();

    cyw43_arch_deinit();

    return true;
}

static char *wifi_get_ip (setting_id_t setting)
{
    static char ip[IPADDR_STRLEN_MAX];

    switch(setting) {

        case Setting_IpAddress3:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.sta.network.ip, ip, IPADDR_STRLEN_MAX);
            break;

        case Setting_Gateway3:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.sta.network.gateway, ip, IPADDR_STRLEN_MAX);
            break;

        case Setting_NetMask3:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.sta.network.mask, ip, IPADDR_STRLEN_MAX);
            break;

#if WIFI_SOFTAP

        case Setting_IpAddress2:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.ap.network.ip, ip, IPADDR_STRLEN_MAX);
            break;

        case Setting_Gateway2:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.ap.network.gateway, ip, IPADDR_STRLEN_MAX);
            break;

        case Setting_NetMask2:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.ap.network.mask, ip, IPADDR_STRLEN_MAX);
            break;

#endif

#if MQTT_ENABLE

        case Setting_MQTTBrokerIpAddress:
            ip4addr_ntoa_r((const ip_addr_t *)&wifi.sta.network.mqtt.ip, ip, IPADDR_STRLEN_MAX);
            break;

#endif

        default:
            *ip = '\0';
            break;
    }

    return ip;
}
